# Qt

Qt/: CMakeLists.txt  CMakeSettings.json  CPP.HINT
Qt/demo-arcanoid/: Arcanoid.cpp  Arcanoid.h  BackgroundWindow.cpp  BackgroundWindow.h  BallSkinWindow.cpp  BallSkinWindow.h  BricksSkinWindow.cpp  BricksSkinWindow.h  CMakeLists.txt  Main.cpp  Settings.cpp  Settings.h  SettingsWindow.cpp  SettingsWindow.h
